# sox-bot

./: .gitignore  README.md
backend/: alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  config.py  database.py  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/analytics/: aggregator.py  report_generator.py
backend/api/: analytics.py  calendar_api.py  community.py  content.py  dashboard.py  keywords.py  leads.py  router.py  video.py
backend/community/: intent.py  lead_detector.py  rag.py  responder.py
backend/content/: calendar.py  enricher.py  generator.py  quality.py  templates.py
backend/models/: __init__.py  analytics.py  content.py  keyword.py  knowledge.py  lead.py
backend/publisher/: manager.py
backend/schemas/: analytics.py  community.py  content.py  keyword.py  lead.py
backend/scout/: analyzer.py  dedup.py  engine.py
backend/scripts/: browser_login.py  generate_promo.py  generate_series.py  generate_tutorial.py  generate_video.py  hn_login.py  reddit_login.py  run_bots.py  seed_keywords.py  youtube_auth.py  youtube_upload.py
backend/tasks/: celery_app.py
backend/tests/: conftest.py  test_aggregator.py  test_analyzer.py  test_calendar.py  test_dedup.py  test_generator.py  test_hn_collector.py  test_intent.py  test_lead_detector.py  test_leads_api.py  test_publisher.py  test_quality.py  test_rag.py  test_reddit_collector.py
backend/video/: code_animator.py  pipeline.py  renderer.py  renderer_ffmpeg.py  script_writer.py  series.py  tts.py  tutorial.py  youtube_upload.py
console/: next.config.ts  (+1 more)
(+19 files in other folders)
